objects/CEEJiffleEvent__c.object
<CustomObject>
    <fields>
        <fullName>Active_Opportunities_List_Before_Event__c</fullName>
        <defaultValue>";"</defaultValue>
        <label>Active Opportunities List Before Event</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active_Opportunity_Value_Before_1_Day__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active Opportunity Value Before 1 Day</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>After_Event_Total_Opportunity_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>After Event Total Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Before_Event_Total_Opportunity_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Before Event Total Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booked_Opportunities_List_After_180_Days__c</fullName>
        <defaultValue>";"</defaultValue>
        <label>Booked Opportunities List After 180 Days</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Booked_Opportunities_List_After_30_Days__c</fullName>
        <defaultValue>";"</defaultValue>
        <label>Booked Opportunities List After 30 Days</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Booked_Opportunities_List_After_90_Days__c</fullName>
        <defaultValue>";"</defaultValue>
        <label>Booked Opportunities List After 90 Days</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Booked_Opportunity_Value_After_180_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Booked Opportunity Value After 180 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booked_Opportunity_Value_After_90_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Booked Opportunity Value After 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Portfolio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Opportunity_Value_After_180_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cancel Opportunity Value After 180 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cancelled_Opportunities_List_After_180_D__c</fullName>
        <defaultValue>";"</defaultValue>
        <label>Cancelled Opportunities List After 180 D</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <label>Event Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Existing_Opportunities_Before_Event__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Existing Opportunities Before Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jifflenow_Event_URL__c</fullName>
        <label>Jifflenow Event URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lost_Opportunities_List_After_180_Days__c</fullName>
        <defaultValue>";"</defaultValue>
        <label>Lost Opportunities List After 180 Days</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lost_Opportunity_Value_After_180_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lost Opportunity Value After 180 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Opportunities_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Opportunities Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Opportunities_List__c</fullName>
        <defaultValue>";"</defaultValue>
        <label>New Opportunities List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Opportunities_after_Event__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Opportunities Count after Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Value_Before_Expected_Date__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opp Value Before Expected Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunities_List_After_180_Days__c</fullName>
        <defaultValue>";"</defaultValue>
        <label>Opportunities List After 180 Days</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunities_List_After_30_Days__c</fullName>
        <defaultValue>";"</defaultValue>
        <label>Opportunities List After 30 Days</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunities_List_After_90_Days__c</fullName>
        <defaultValue>";"</defaultValue>
        <label>Opportunities List After 90 Days</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunities_List_Before_Event_Not_Book__c</fullName>
        <defaultValue>";"</defaultValue>
        <label>Opportunities List Before Event Not Book</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunities_List_Before_Event__c</fullName>
        <defaultValue>";"</defaultValue>
        <label>Opportunities List Before Event</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunities_List_Before_Expected_Date__c</fullName>
        <defaultValue>";"</defaultValue>
        <label>Opportunities List Before Expected Date</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunities_List__c</fullName>
        <defaultValue>";"</defaultValue>
        <label>Opportunities List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value_From_Booked_Status__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opportunity Value From Booked Status</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Value_Status_Not_Booked__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opportunity Value Status Not Booked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Opportunities_Before_Event__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Opportunities Before Event</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Value_After_180_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Opportunity Value After 180 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Value_After_30_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Opportunity Value After 30 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Value_After_90_Days__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Opportunity Value After 90 Days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <description>This Object is to store the Jifflenow Events information</description>
    <label>zzCEEJiffleEvent</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CEEJiffleEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>